# ros_shc

./: CMakeLists.txt  README.md  package.xml
include/: sc_nodes.hpp  zc_nodes.hpp
include/benchmark/: benchmark.hpp  mat_mul_cpu.hpp  mat_mul_gpu.cuh
include/ros_shc/: object_creator.hpp
include/ros_shc/shared_memory/: interface.hpp  posix.hpp
include/ros_shc/shared_memory_allocator/: allocator.hpp  interface.hpp
msg/: InputData.msg  OutputData.msg  Token.msg
script/: plot.bash  plots.py
src/: sc_checker.cpp  sc_mat_mul_cpu.cpp  sc_mat_mul_gpu.cpp  sc_producer.cpp  zc_cluster.cpp
src/benchmark/: mat_mul_cpu.cpp  mat_mul_gpu.cu
test/: test_object_creator.cpp  test_vector.cpp
